--- a/blog.html
+++ b/blog.html
@@ -7,9 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Personal Blog</title>
   <link rel="stylesheet" href="css/style.css"></link>
+  <link rel="icon" type="image/x-icon" href="images/favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Mali:wght@500&family=Open+Sans&family=Raleway:wght@500&display=swap" rel="stylesheet">  
 </head>
 
 <body>
@@ -32,7 +33,9 @@
           <li class="nav-item">
             <form id="search" action="/action_page.php">
               <input id="nav-search-text" type="text" placeholder="Search..." name="search">
-              <button id="nav-search-butn" type="submit"></button>
+              <button id="nav-search-butn" type="submit">
+                <img id="nav-search-img" src="images/search-alt-free-icon-font.png" alt="">
+              </button>
             </form>
           </li>
         </ul>
@@ -43,9 +46,9 @@
 
       <article class="main-article">
         <div class="author-photo">
-          <img src="" alt="foto of author">
+          <img class="author-photo-img" src="images/beauty.png" alt="foto of author">
         </div>
-        <h4 class="author-and-date">by <em>Author</em> on <em>Date of Article</em></h4>
+        <h4 class="author-and-date"><em class="author-and-date-small">by</em> &nbsp; Author &nbsp; <em class="author-and-date-small">on</em> &nbsp; Date</h4>
         <h1 class="main-article-title">
           <a class="main-article-title-link" href="blog-post.html">Main article 1</a>
         </h1>
@@ -53,21 +56,22 @@
           <a class="article-category-link" href="">Language</a>
           <a class="article-category-link" href="">Topic</a>
         </p>
-
         <p class="main-article-short-text">
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit accusantium necessitatibus facere autem nostrum molestias qui fugiat excepturi et! Ad odio obcaecati distinctio necessitatibus adipisci dolore recusandae quibusdam commodi laborum.
         </p>
-        <button class="continue-reading">
-          <a href="blog-post.html">Continue Reading</a>
-        </button>
+        <a class="main-article-continue-reading" href="blog-post.html">
+          <button class="main-article-continue-reading-btn"></button>Continue Reading
+        </a>
       </article>
 
       <article class="acticle">
         <div class="author-photo">
-          <img src="" alt="foto of author">
+          <img class="author-photo-img" src="images/beauty.png" alt="foto of author">
         </div>
-        <h4 class="author"><em>Author</em></h4>
-        <h1 class="article-title">Article 1</h1>
+        <h4 class="author-and-date">Author</h4>
+        <h1 class="article-title">
+          <a class="article-title-link" href="">Article 1</a>
+        </h1>
         <p class="article-category">
           <a class="article-category-link" href="">Language</a>
           <a class="article-category-link" href="">Topic</a>
@@ -76,10 +80,12 @@
 
       <article class="acticle">
         <div class="author-photo">
-          <img src="" alt="foto of author">
+          <img class="author-photo-img" src="images/beauty.png" alt="foto of author">
         </div>
-        <h4 class="author"><em>Author</em></h4>
-        <h1 class="article-title">Article 2</h1>
+        <h4 class="author-and-date">Author</h4>
+        <h1 class="article-title">
+          <a class="article-title-link" href="">Article 2</a>
+        </h1>
         <p class="article-category">
           <a class="article-category-link" href="">Language</a>
           <a class="article-category-link" href="">Topic</a>
@@ -88,10 +94,12 @@
 
       <article class="acticle">
         <div class="author-photo">
-          <img src="" alt="foto of author">
+          <img class="author-photo-img" src="images/beauty.png" alt="foto of author">
         </div>
-        <h4 class="author"><em>Author</em></h4>
-        <h1 class="article-title">Article 3</h1>
+        <h4 class="author-and-date">Author</h4>
+        <h1 class="article-title">
+          <a class="article-title-link" href="">Article 3</a>
+        </h1>
         <p class="article-category">
           <a class="article-category-link" href="">Language</a>
           <a class="article-category-link" href="">Topic</a>
@@ -100,10 +108,12 @@
 
       <article class="acticle">
         <div class="author-photo">
-          <img src="" alt="foto of author">
+          <img class="author-photo-img" src="images/beauty.png" alt="foto of author">
         </div>
-        <h4 class="author"><em>Author</em></h4>
-        <h1 class="article-title">Article 4</h1>
+        <h4 class="author-and-date">Author</h4>
+        <h1 class="article-title">
+          <a class="article-title-link" href="">Article 4</a>
+        </h1>
         <p class="article-category">
           <a class="article-category-link" href="">Language</a>
           <a class="article-category-link" href="">Topic</a>
@@ -112,10 +122,12 @@
 
       <article class="acticle">
         <div class="author-photo">
-          <img src="" alt="foto of author">
+          <img class="author-photo-img" src="images/beauty.png" alt="foto of author">
         </div>
-        <h4 class="author"><em>Author</em></h4>
-        <h1 class="article-title">Article 5</h1>
+        <h4 class="author-and-date">Author</h4>
+        <h1 class="article-title">
+          <a class="article-title-link" href="">Article 5</a>
+        </h1>
         <p class="article-category">
           <a class="article-category-link" href="">Language</a>
           <a class="article-category-link" href="">Topic</a>
@@ -124,10 +136,12 @@
 
       <article class="acticle">
         <div class="author-photo">
-          <img src="" alt="foto of author">
+          <img class="author-photo-img" src="images/beauty.png" alt="foto of author">
         </div>
-        <h4 class="author"><em>Author</em></h4>
-        <h1 class="article-title">Article 6</h1>
+        <h4 class="author-and-date">Author</h4>
+        <h1 class="article-title">
+          <a class="article-title-link" href="">Article 6</a>
+        </h1>
         <p class="article-category">
           <a class="article-category-link" href="">Language</a>
           <a class="article-category-link" href="">Topic</a>
@@ -136,28 +150,32 @@
 
       <article class="main-article">
         <div class="author-photo">
-          <img src="" alt="foto of author">
+          <img class="author-photo-img" src="images/beauty.png" alt="foto of author">
         </div>
-        <h4 class="author-and-date"><em>Author</em> and <em>Date of Article</em></h4>
-        <h1 class="article-title">Main article 2</h1>
+        <h4 class="author-and-date"><em class="author-and-date-small">by</em> &nbsp; Author &nbsp; <em class="author-and-date-small">on</em> &nbsp; Date</h4>
+        <h1 class="main-article-title">
+          <a class="main-article-title-link" href="">Main article 2</a>
+        </h1>
         <p class="article-category">
           <a class="article-category-link" href="">Language</a>
           <a class="article-category-link" href="">Topic</a>
         </p>
-        <p class="article-short-text">
+        <p class="main-article-short-text">
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit accusantium necessitatibus facere autem nostrum molestias qui fugiat excepturi et! Ad odio obcaecati distinctio necessitatibus adipisci dolore recusandae quibusdam commodi laborum.
         </p>
-        <button class="continue-reading">
-          <a href="blog-post.html">Continue Reading</a>
-        </button>
+        <a class="main-article-continue-reading" href="blog-post.html">
+          <button class="main-article-continue-reading-btn"></button>Continue Reading
+        </a>
       </article>
 
       <article class="acticle">
         <div class="author-photo">
-          <img src="" alt="foto of author">
+          <img class="author-photo-img" src="images/beauty.png" alt="foto of author">
         </div>
-        <h4 class="author"><em>Author</em></h4>
-        <h1 class="article-title">Article 7</h1>
+        <h4 class="author-and-date">Author</h4>
+        <h1 class="article-title">
+          <a class="article-title-link" href="">Article 7</a>
+        </h1>
         <p class="article-category">
           <a class="article-category-link" href="">Language</a>
           <a class="article-category-link" href="">Topic</a>
@@ -166,10 +184,12 @@
 
       <article class="acticle">
         <div class="author-photo">
-          <img src="" alt="foto of author">
+          <img class="author-photo-img" src="images/beauty.png" alt="foto of author">
         </div>
-        <h4 class="author"><em>Author</em></h4>
-        <h1 class="article-title">Article 8</h1>
+        <h4 class="author-and-date">Author</h4>
+        <h1 class="article-title">
+          <a class="article-title-link" href="">Article 8</a>
+        </h1>
         <p class="article-category">
           <a class="article-category-link" href="">Language</a>
           <a class="article-category-link" href="">Topic</a>
@@ -178,10 +198,12 @@
 
       <article class="acticle">
         <div class="author-photo">
-          <img src="" alt="foto of author">
+          <img class="author-photo-img" src="images/beauty.png" alt="foto of author">
         </div>
-        <h4 class="author"><em>Author</em></h4>
-        <h1 class="article-title">Article 9</h1>
+        <h4 class="author-and-date">Author</h4>
+        <h1 class="article-title">
+          <a class="article-title-link" href="">Article 9</a>
+        </h1>
         <p class="article-category">
           <a class="article-category-link" href="">Language</a>
           <a class="article-category-link" href="">Topic</a>
@@ -190,10 +212,12 @@
 
       <article class="acticle">
         <div class="author-photo">
-          <img src="" alt="foto of author">
+          <img class="author-photo-img" src="images/beauty.png" alt="foto of author">
         </div>
-        <h4 class="author"><em>Author</em></h4>
-        <h1 class="article-title">Article 10</h1>
+        <h4 class="author-and-date">Author</h4>
+        <h1 class="article-title">
+          <a class="article-title-link" href="">Article 10</a>
+        </h1>
         <p class="article-category">
           <a class="article-category-link" href="">Language</a>
           <a class="article-category-link" href="">Topic</a>
@@ -202,11 +226,11 @@
     </main>
 
     <section id="page-navigation">
-      <a class="page-number" href="">1</a>
-      <a class="page-number" href="">1</a>
-      <a class="page-number" href="">1</a>
-      <a class="page-number" href="">...</a>
-      <a class="page-number" href="">50</a>
+      <a class="page-number-active" href="">&nbsp; 1 &nbsp;</a>
+      <a class="page-number" href="">&nbsp; 2 &nbsp;</a>
+      <a class="page-number" href="">&nbsp; 3 &nbsp;</a>
+      <p class="page-number" href="">&nbsp; ... &nbsp;</p>
+      <a class="page-number" href="">&nbsp; 50 &nbsp;</a>
       <button id="next-page">Next Page</button>
     </section>
 
@@ -241,7 +265,7 @@
     </section>
 
     <footer>
-      <p id="copyright">Copyright © 2022 <em>Marina Saitgareeva</em></p>
+      <p id="copyright">Copyright © 2022 <em>&nbsp; &nbsp; Marina Saitgareeva</em></p>
       <a class="social-link" href="https://www.instagram.com/">
         <img class="social-logo" src="images/instagram.png" alt="instagram">
       </a>
