--- a/blog-page2.html
+++ b/blog-page2.html
@@ -33,7 +33,6 @@
           <li class="nav-item">
             <form id="search" action="/action_page.php">
               <input id="nav-search-text" type="text" placeholder="Search..." name="search">
-
               <button id="nav-search-butn" type="submit">
                 <img id="nav-search-img" src="images/search-alt-free-icon-font.png" alt="">
               </button>
@@ -41,10 +40,6 @@
           </li>
         </ul>
       </nav>
-
-      <button id="navbar-mobile">
-        Menu
-      </button>
     </header>
 
     <main id="container">
@@ -53,23 +48,18 @@
         <div class="author-photo">
           <img class="author-photo-img" src="images/beauty.png" alt="foto of author">
         </div>
-
         <h4 class="author-and-date"><em class="author-and-date-small">by</em> &nbsp; Author &nbsp; <em class="author-and-date-small">on</em> &nbsp; Date</h4>
-
         <h1 class="main-article-title">
-          <a class="main-article-title-link" href="blog-post.html">Main article 1</a>
+          <a class="main-article-title-link" href="">Main article 3</a>
         </h1>
-
         <p class="article-category">
           <a class="article-category-link" href="">Language</a>
           <a class="article-category-link" href="">Topic</a>
         </p>
-
         <p class="main-article-short-text">
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit accusantium necessitatibus facere autem nostrum molestias qui fugiat excepturi et! Ad odio obcaecati distinctio necessitatibus adipisci dolore recusandae quibusdam commodi laborum.
         </p>
-
-        <a class="main-article-continue-reading" href="blog-post.html">
+        <a class="main-article-continue-reading" href="">
           <button class="main-article-continue-reading-btn"></button>Continue Reading
         </a>
       </article>
@@ -78,13 +68,10 @@
         <div class="author-photo">
           <img class="author-photo-img" src="images/beauty.png" alt="foto of author">
         </div>
-
         <h4 class="author-and-date">Author</h4>
-
         <h1 class="article-title">
-          <a class="article-title-link" href="">Article 1</a>
+          <a class="article-title-link" href="">Article 11</a>
         </h1>
-
         <p class="article-category">
           <a class="article-category-link" href="">Language</a>
           <a class="article-category-link" href="">Topic</a>
@@ -95,31 +82,10 @@
         <div class="author-photo">
           <img class="author-photo-img" src="images/beauty.png" alt="foto of author">
         </div>
-
         <h4 class="author-and-date">Author</h4>
-
         <h1 class="article-title">
-          <a class="article-title-link" href="">Article 2</a>
+          <a class="article-title-link" href="">Article 12</a>
         </h1>
-
-        <p class="article-category">
-
-          <a class="article-category-link" href="">Language</a>
-          <a class="article-category-link" href="">Topic</a>
-        </p>
-      </article>
-
-      <article class="acticle">
-        <div class="author-photo">
-          <img class="author-photo-img" src="images/beauty.png" alt="foto of author">
-        </div>
-
-        <h4 class="author-and-date">Author</h4>
-
-        <h1 class="article-title">
-          <a class="article-title-link" href="">Article 3</a>
-        </h1>
-
         <p class="article-category">
           <a class="article-category-link" href="">Language</a>
           <a class="article-category-link" href="">Topic</a>
@@ -130,13 +96,10 @@
         <div class="author-photo">
           <img class="author-photo-img" src="images/beauty.png" alt="foto of author">
         </div>
-
         <h4 class="author-and-date">Author</h4>
-
         <h1 class="article-title">
-          <a class="article-title-link" href="">Article 4</a>
+          <a class="article-title-link" href="">Article 13</a>
         </h1>
-
         <p class="article-category">
           <a class="article-category-link" href="">Language</a>
           <a class="article-category-link" href="">Topic</a>
@@ -147,13 +110,10 @@
         <div class="author-photo">
           <img class="author-photo-img" src="images/beauty.png" alt="foto of author">
         </div>
-
         <h4 class="author-and-date">Author</h4>
-
         <h1 class="article-title">
-          <a class="article-title-link" href="">Article 5</a>
+          <a class="article-title-link" href="">Article 14</a>
         </h1>
-
         <p class="article-category">
           <a class="article-category-link" href="">Language</a>
           <a class="article-category-link" href="">Topic</a>
@@ -164,13 +124,24 @@
         <div class="author-photo">
           <img class="author-photo-img" src="images/beauty.png" alt="foto of author">
         </div>
-
         <h4 class="author-and-date">Author</h4>
-
         <h1 class="article-title">
-          <a class="article-title-link" href="">Article 6</a>
+          <a class="article-title-link" href="">Article 15</a>
         </h1>
+        <p class="article-category">
+          <a class="article-category-link" href="">Language</a>
+          <a class="article-category-link" href="">Topic</a>
+        </p>
+      </article>
 
+      <article class="acticle">
+        <div class="author-photo">
+          <img class="author-photo-img" src="images/beauty.png" alt="foto of author">
+        </div>
+        <h4 class="author-and-date">Author</h4>
+        <h1 class="article-title">
+          <a class="article-title-link" href="">Article 16</a>
+        </h1>
         <p class="article-category">
           <a class="article-category-link" href="">Language</a>
           <a class="article-category-link" href="">Topic</a>
@@ -181,22 +152,17 @@
         <div class="author-photo">
           <img class="author-photo-img" src="images/beauty.png" alt="foto of author">
         </div>
-
         <h4 class="author-and-date"><em class="author-and-date-small">by</em> &nbsp; Author &nbsp; <em class="author-and-date-small">on</em> &nbsp; Date</h4>
-
         <h1 class="main-article-title">
-          <a class="main-article-title-link" href="">Main article 2</a>
+          <a class="main-article-title-link" href="">Main article 4</a>
         </h1>
-
         <p class="article-category">
           <a class="article-category-link" href="">Language</a>
           <a class="article-category-link" href="">Topic</a>
         </p>
-
         <p class="main-article-short-text">
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit accusantium necessitatibus facere autem nostrum molestias qui fugiat excepturi et! Ad odio obcaecati distinctio necessitatibus adipisci dolore recusandae quibusdam commodi laborum.
         </p>
-
         <a class="main-article-continue-reading" href="blog-post.html">
           <button class="main-article-continue-reading-btn"></button>Continue Reading
         </a>
@@ -206,13 +172,10 @@
         <div class="author-photo">
           <img class="author-photo-img" src="images/beauty.png" alt="foto of author">
         </div>
-
         <h4 class="author-and-date">Author</h4>
-
         <h1 class="article-title">
-          <a class="article-title-link" href="">Article 7</a>
+          <a class="article-title-link" href="">Article 17</a>
         </h1>
-
         <p class="article-category">
           <a class="article-category-link" href="">Language</a>
           <a class="article-category-link" href="">Topic</a>
@@ -223,13 +186,10 @@
         <div class="author-photo">
           <img class="author-photo-img" src="images/beauty.png" alt="foto of author">
         </div>
-
         <h4 class="author-and-date">Author</h4>
-
         <h1 class="article-title">
-          <a class="article-title-link" href="">Article 8</a>
+          <a class="article-title-link" href="">Article 18</a>
         </h1>
-
         <p class="article-category">
           <a class="article-category-link" href="">Language</a>
           <a class="article-category-link" href="">Topic</a>
@@ -240,13 +200,10 @@
         <div class="author-photo">
           <img class="author-photo-img" src="images/beauty.png" alt="foto of author">
         </div>
-
         <h4 class="author-and-date">Author</h4>
-
         <h1 class="article-title">
-          <a class="article-title-link" href="">Article 9</a>
+          <a class="article-title-link" href="">Article 19</a>
         </h1>
-
         <p class="article-category">
           <a class="article-category-link" href="">Language</a>
           <a class="article-category-link" href="">Topic</a>
@@ -257,13 +214,10 @@
         <div class="author-photo">
           <img class="author-photo-img" src="images/beauty.png" alt="foto of author">
         </div>
-
         <h4 class="author-and-date">Author</h4>
-
         <h1 class="article-title">
-          <a class="article-title-link" href="">Article 10</a>
+          <a class="article-title-link" href="">Article 20</a>
         </h1>
-
         <p class="article-category">
           <a class="article-category-link" href="">Language</a>
           <a class="article-category-link" href="">Topic</a>
@@ -272,12 +226,11 @@
     </main>
 
     <section id="page-navigation">
-      <a class="page-number-active" href="blog.html">&nbsp; 1 &nbsp;</a>
-      <a class="page-number" href="blog-page2.html">&nbsp; 2 &nbsp;</a>
+      <a class="page-number" href="blog.html">&nbsp; 1 &nbsp;</a>
+      <a class="page-number-active" href="">&nbsp; 2 &nbsp;</a>
       <a class="page-number" href="">&nbsp; 3 &nbsp;</a>
       <p class="page-number" href="">&nbsp; ... &nbsp;</p>
       <a class="page-number" href="">&nbsp; 10 &nbsp;</a>
-
       <button id="next-page">Next Page</button>
     </section>
 
@@ -287,22 +240,18 @@
 
         <input id="name" name="name" type="text" placeholder="Name" required>
         <br>
-
         <input id="email" type="email" name="email" placeholder="Email" required>
 
         <fieldset id="frequency">
           <legend id="frequency-text">Please select frequency:</legend>
-
           <div class="frequency-selector">
             <input id="monthly" type="radio" name="frequency" value="monthly" checked>
             <label class="frequency-label" for="monthly">Monthly</label>
           </div>
-
           <div class="frequency-selector">
             <input id="weekly" type="radio" name="frequency" value="weekly">
             <label class="frequency-label" for="weekly">Weekly</label>
           </div>
-
           <div class="frequency-selector">
             <input id="daily" type="radio" name="frequency" value="daily">
             <label class="frequency-label" for="daily">Daily</label>
@@ -317,7 +266,6 @@
 
     <footer>
       <p id="copyright">Copyright © 2022 <em>&nbsp; &nbsp; Marina Saitgareeva</em></p>
-
       <a class="social-link" href="https://www.instagram.com/">
         <img class="social-logo" src="images/instagram.png" alt="instagram">
       </a>
