--- a/blog.html
+++ b/blog.html
@@ -26,7 +26,7 @@
       <nav class="navbar-menu">
         <input type="checkbox" id="checkbox-toggle">
 
-        <ul class="navbar-list">
+        <ul class="navbar-list" role="list">
           <li class="nav-item"><a class="nav-link" href="blog.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="">About us</a></li>
           <li class="nav-item"><a class="nav-link" href="">HTML</a></li>
@@ -90,9 +90,10 @@
       <article class="acticle">
         <div class="author-photo">
           <img class="author-photo-img" src="images/beauty.png" alt="foto of author">
+          <h4 class="author-and-date">Author</h4>
         </div>
 
-        <h4 class="author-and-date">Author</h4>
+        
 
         <h1 class="article-title">
           <a class="article-title-link" href="">Article 1</a>
