change search input

--- a/blog.html
+++ b/blog.html
@@ -36,11 +36,7 @@
           <li class="nav-item"><a class="nav-link" href="">Git</a></li>
           <li class="nav-item">
             <form id="search" action="/action_page.php">
-              <input id="nav-search-text" type="text" placeholder="Search..." name="search">
-  
-              <button id="nav-search-btn" type="submit">
-                <img id="nav-search-img" src="images/search-alt-free-icon-font.png" alt="">
-              </button>
+              <input id="nav-search-text" type="text" placeholder="&#128269   Search..." name="search">
             </form>
           </li>
         </ul>
