final changes for blog.html + blog-page2.html

--- a/blog.html
+++ b/blog.html
@@ -273,13 +273,15 @@
     </main>
 
     <section id="page-navigation">
-      <a class="page-number-active" href="blog.html">&nbsp; 1 &nbsp;</a>
-      <a class="page-number" href="blog-page2.html">&nbsp; 2 &nbsp;</a>
-      <a class="page-number" href="">&nbsp; 3 &nbsp;</a>
-      <p class="page-number" href="">&nbsp; ... &nbsp;</p>
-      <a class="page-number" href="">&nbsp; 10 &nbsp;</a>
+      <a class="page-number-active" href="blog.html">&nbsp;1&nbsp;</a>
+      <a class="page-number" href="blog-page2.html">&nbsp;2&nbsp;</a>
+      <a class="page-number" href="">&nbsp;3&nbsp;</a>
+      <p class="page-number" href="">&nbsp;...&nbsp;</p>
+      <a class="page-number" href="">&nbsp;5&nbsp;</a>
 
-      <button id="next-page">Next Page</button>
+      <button class="change-page">
+        <a class="change-page-link" href="blog-page2.html">Next Page</a>
+      </button>
     </section>
 
     <section id="subscribe-form">
