--- a/blog-page2.html
+++ b/blog-page2.html
@@ -21,25 +21,39 @@
         <strong id="page-name">Marina's Blog</strong>
       </div>
 
-      <nav id="navbar-menu">
-        <ul id="navbar-list">
+
+
+      <nav class="navbar-menu">
+        <input type="checkbox" id="checkbox-toggle">
+
+        <ul class="navbar-list" role="list">
           <li class="nav-item"><a class="nav-link" href="blog.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="">About us</a></li>
           <li class="nav-item"><a class="nav-link" href="">HTML</a></li>
           <li class="nav-item"><a class="nav-link" href="">CSS</a></li>
           <li class="nav-item"><a class="nav-link" href="">JavaScript</a></li>
           <li class="nav-item"><a class="nav-link" href="">Python</a></li>
-          <li class="nav-item"><a class="nav-link" href="">Git and GitHub</a></li>
+          <li class="nav-item"><a class="nav-link" href="">Git</a></li>
           <li class="nav-item">
             <form id="search" action="/action_page.php">
-              <input id="nav-search-text" type="text" placeholder="Search..." name="search">
-              <button id="nav-search-butn" type="submit">
-                <img id="nav-search-img" src="images/search-alt-free-icon-font.png" alt="">
-              </button>
+              <input id="nav-search-text" type="text" placeholder="&#128269   Search..." name="search">
             </form>
           </li>
         </ul>
+
+        <label for="checkbox-toggle" class="navbar-mobile-btn">
+          <p class="navbar-mobile-btn-text">Menu</p>
+          <div class="navbar-mobile-btn-line">
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+          </div>
+        </label>
       </nav>
+
+      <button id="navbar-mobile">
+        Menu
+      </button>
     </header>
 
     <main id="container">
@@ -48,18 +62,23 @@
         <div class="author-photo">
           <img class="author-photo-img" src="images/beauty.png" alt="foto of author">
         </div>
+
         <h4 class="author-and-date"><em class="author-and-date-small">by</em> &nbsp; Author &nbsp; <em class="author-and-date-small">on</em> &nbsp; Date</h4>
+
         <h1 class="main-article-title">
-          <a class="main-article-title-link" href="">Main article 3</a>
+          <a class="main-article-title-link" href="blog-post.html">Main article 2</a>
         </h1>
+
         <p class="article-category">
           <a class="article-category-link" href="">Language</a>
           <a class="article-category-link" href="">Topic</a>
         </p>
+
         <p class="main-article-short-text">
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit accusantium necessitatibus facere autem nostrum molestias qui fugiat excepturi et! Ad odio obcaecati distinctio necessitatibus adipisci dolore recusandae quibusdam commodi laborum.
         </p>
-        <a class="main-article-continue-reading" href="">
+
+        <a class="main-article-continue-reading" href="blog-post.html">
           <button class="main-article-continue-reading-btn"></button>Continue Reading
         </a>
       </article>
@@ -67,11 +86,15 @@
       <article class="acticle">
         <div class="author-photo">
           <img class="author-photo-img" src="images/beauty.png" alt="foto of author">
+          <h4 class="author-and-date">Author</h4>
         </div>
-        <h4 class="author-and-date">Author</h4>
+
+        
+
         <h1 class="article-title">
           <a class="article-title-link" href="">Article 11</a>
         </h1>
+
         <p class="article-category">
           <a class="article-category-link" href="">Language</a>
           <a class="article-category-link" href="">Topic</a>
@@ -81,12 +104,15 @@
       <article class="acticle">
         <div class="author-photo">
           <img class="author-photo-img" src="images/beauty.png" alt="foto of author">
+          <h4 class="author-and-date">Author</h4>
         </div>
-        <h4 class="author-and-date">Author</h4>
+
         <h1 class="article-title">
           <a class="article-title-link" href="">Article 12</a>
         </h1>
+
         <p class="article-category">
+
           <a class="article-category-link" href="">Language</a>
           <a class="article-category-link" href="">Topic</a>
         </p>
@@ -95,11 +121,13 @@
       <article class="acticle">
         <div class="author-photo">
           <img class="author-photo-img" src="images/beauty.png" alt="foto of author">
+          <h4 class="author-and-date">Author</h4>
         </div>
-        <h4 class="author-and-date">Author</h4>
+
         <h1 class="article-title">
           <a class="article-title-link" href="">Article 13</a>
         </h1>
+
         <p class="article-category">
           <a class="article-category-link" href="">Language</a>
           <a class="article-category-link" href="">Topic</a>
@@ -109,11 +137,13 @@
       <article class="acticle">
         <div class="author-photo">
           <img class="author-photo-img" src="images/beauty.png" alt="foto of author">
+          <h4 class="author-and-date">Author</h4>
         </div>
-        <h4 class="author-and-date">Author</h4>
+
         <h1 class="article-title">
           <a class="article-title-link" href="">Article 14</a>
         </h1>
+
         <p class="article-category">
           <a class="article-category-link" href="">Language</a>
           <a class="article-category-link" href="">Topic</a>
@@ -123,11 +153,13 @@
       <article class="acticle">
         <div class="author-photo">
           <img class="author-photo-img" src="images/beauty.png" alt="foto of author">
+          <h4 class="author-and-date">Author</h4>
         </div>
-        <h4 class="author-and-date">Author</h4>
+
         <h1 class="article-title">
           <a class="article-title-link" href="">Article 15</a>
         </h1>
+
         <p class="article-category">
           <a class="article-category-link" href="">Language</a>
           <a class="article-category-link" href="">Topic</a>
@@ -137,11 +169,13 @@
       <article class="acticle">
         <div class="author-photo">
           <img class="author-photo-img" src="images/beauty.png" alt="foto of author">
+          <h4 class="author-and-date">Author</h4>
         </div>
-        <h4 class="author-and-date">Author</h4>
+
         <h1 class="article-title">
           <a class="article-title-link" href="">Article 16</a>
         </h1>
+
         <p class="article-category">
           <a class="article-category-link" href="">Language</a>
           <a class="article-category-link" href="">Topic</a>
@@ -152,17 +186,22 @@
         <div class="author-photo">
           <img class="author-photo-img" src="images/beauty.png" alt="foto of author">
         </div>
+
         <h4 class="author-and-date"><em class="author-and-date-small">by</em> &nbsp; Author &nbsp; <em class="author-and-date-small">on</em> &nbsp; Date</h4>
+
         <h1 class="main-article-title">
           <a class="main-article-title-link" href="">Main article 4</a>
         </h1>
+
         <p class="article-category">
           <a class="article-category-link" href="">Language</a>
           <a class="article-category-link" href="">Topic</a>
         </p>
+
         <p class="main-article-short-text">
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit accusantium necessitatibus facere autem nostrum molestias qui fugiat excepturi et! Ad odio obcaecati distinctio necessitatibus adipisci dolore recusandae quibusdam commodi laborum.
         </p>
+
         <a class="main-article-continue-reading" href="blog-post.html">
           <button class="main-article-continue-reading-btn"></button>Continue Reading
         </a>
@@ -171,11 +210,13 @@
       <article class="acticle">
         <div class="author-photo">
           <img class="author-photo-img" src="images/beauty.png" alt="foto of author">
+          <h4 class="author-and-date">Author</h4>
         </div>
-        <h4 class="author-and-date">Author</h4>
+
         <h1 class="article-title">
           <a class="article-title-link" href="">Article 17</a>
         </h1>
+
         <p class="article-category">
           <a class="article-category-link" href="">Language</a>
           <a class="article-category-link" href="">Topic</a>
@@ -185,11 +226,13 @@
       <article class="acticle">
         <div class="author-photo">
           <img class="author-photo-img" src="images/beauty.png" alt="foto of author">
+          <h4 class="author-and-date">Author</h4>
         </div>
-        <h4 class="author-and-date">Author</h4>
+
         <h1 class="article-title">
           <a class="article-title-link" href="">Article 18</a>
         </h1>
+
         <p class="article-category">
           <a class="article-category-link" href="">Language</a>
           <a class="article-category-link" href="">Topic</a>
@@ -199,11 +242,13 @@
       <article class="acticle">
         <div class="author-photo">
           <img class="author-photo-img" src="images/beauty.png" alt="foto of author">
+          <h4 class="author-and-date">Author</h4>
         </div>
-        <h4 class="author-and-date">Author</h4>
+
         <h1 class="article-title">
           <a class="article-title-link" href="">Article 19</a>
         </h1>
+
         <p class="article-category">
           <a class="article-category-link" href="">Language</a>
           <a class="article-category-link" href="">Topic</a>
@@ -213,11 +258,13 @@
       <article class="acticle">
         <div class="author-photo">
           <img class="author-photo-img" src="images/beauty.png" alt="foto of author">
+          <h4 class="author-and-date">Author</h4>
         </div>
-        <h4 class="author-and-date">Author</h4>
+
         <h1 class="article-title">
           <a class="article-title-link" href="">Article 20</a>
         </h1>
+
         <p class="article-category">
           <a class="article-category-link" href="">Language</a>
           <a class="article-category-link" href="">Topic</a>
@@ -226,12 +273,19 @@
     </main>
 
     <section id="page-navigation">
-      <a class="page-number" href="blog.html">&nbsp; 1 &nbsp;</a>
-      <a class="page-number-active" href="">&nbsp; 2 &nbsp;</a>
-      <a class="page-number" href="">&nbsp; 3 &nbsp;</a>
-      <p class="page-number" href="">&nbsp; ... &nbsp;</p>
-      <a class="page-number" href="">&nbsp; 10 &nbsp;</a>
-      <button id="next-page">Next Page</button>
+      <button class="change-page">
+        <a class="change-page-link" href="blog.html">Previous Page</a>
+      </button>
+
+      <a class="page-number" href="blog.html">&nbsp;1&nbsp;</a>
+      <a class="page-number-active" href="blog-page2.html">&nbsp;2&nbsp;</a>
+      <a class="page-number" href="">&nbsp;3&nbsp;</a>
+      <p class="page-number" href="">&nbsp;...&nbsp;</p>
+      <a class="page-number" href="">&nbsp;5&nbsp;</a>
+
+      <button class="change-page">
+        <a class="change-page-link" href="">Next Page</a>
+      </button>
     </section>
 
     <section id="subscribe-form">
@@ -240,18 +294,22 @@
 
         <input id="name" name="name" type="text" placeholder="Name" required>
         <br>
+
         <input id="email" type="email" name="email" placeholder="Email" required>
 
         <fieldset id="frequency">
           <legend id="frequency-text">Please select frequency:</legend>
+
           <div class="frequency-selector">
             <input id="monthly" type="radio" name="frequency" value="monthly" checked>
             <label class="frequency-label" for="monthly">Monthly</label>
           </div>
+
           <div class="frequency-selector">
             <input id="weekly" type="radio" name="frequency" value="weekly">
             <label class="frequency-label" for="weekly">Weekly</label>
           </div>
+
           <div class="frequency-selector">
             <input id="daily" type="radio" name="frequency" value="daily">
             <label class="frequency-label" for="daily">Daily</label>
@@ -266,6 +324,7 @@
 
     <footer>
       <p id="copyright">Copyright © 2022 <em>&nbsp; &nbsp; Marina Saitgareeva</em></p>
+
       <a class="social-link" href="https://www.instagram.com/">
         <img class="social-logo" src="images/instagram.png" alt="instagram">
       </a>
