--- a/blog-page4.html
+++ b/blog-page4.html
@@ -66,7 +66,7 @@
         <h4 class="author-and-date"><em class="author-and-date-small">by</em> &nbsp; Author &nbsp; <em class="author-and-date-small">on</em> &nbsp; Date</h4>
 
         <h1 class="main-article-title">
-          <a class="main-article-title-link" href="blog-post.html">Main article 2</a>
+          <a class="main-article-title-link" href="blog-post.html">Main article 7</a>
         </h1>
 
         <p class="article-category">
@@ -92,7 +92,7 @@
         
 
         <h1 class="article-title">
-          <a class="article-title-link" href="">Article 11</a>
+          <a class="article-title-link" href="">Article 31</a>
         </h1>
 
         <p class="article-category">
@@ -108,7 +108,7 @@
         </div>
 
         <h1 class="article-title">
-          <a class="article-title-link" href="">Article 12</a>
+          <a class="article-title-link" href="">Article 32</a>
         </h1>
 
         <p class="article-category">
@@ -125,7 +125,7 @@
         </div>
 
         <h1 class="article-title">
-          <a class="article-title-link" href="">Article 13</a>
+          <a class="article-title-link" href="">Article 33</a>
         </h1>
 
         <p class="article-category">
@@ -141,7 +141,7 @@
         </div>
 
         <h1 class="article-title">
-          <a class="article-title-link" href="">Article 14</a>
+          <a class="article-title-link" href="">Article 34</a>
         </h1>
 
         <p class="article-category">
@@ -157,7 +157,7 @@
         </div>
 
         <h1 class="article-title">
-          <a class="article-title-link" href="">Article 15</a>
+          <a class="article-title-link" href="">Article 35</a>
         </h1>
 
         <p class="article-category">
@@ -173,7 +173,7 @@
         </div>
 
         <h1 class="article-title">
-          <a class="article-title-link" href="">Article 16</a>
+          <a class="article-title-link" href="">Article 36</a>
         </h1>
 
         <p class="article-category">
@@ -190,7 +190,7 @@
         <h4 class="author-and-date"><em class="author-and-date-small">by</em> &nbsp; Author &nbsp; <em class="author-and-date-small">on</em> &nbsp; Date</h4>
 
         <h1 class="main-article-title">
-          <a class="main-article-title-link" href="">Main article 4</a>
+          <a class="main-article-title-link" href="">Main article 8</a>
         </h1>
 
         <p class="article-category">
@@ -214,7 +214,7 @@
         </div>
 
         <h1 class="article-title">
-          <a class="article-title-link" href="">Article 17</a>
+          <a class="article-title-link" href="">Article 37</a>
         </h1>
 
         <p class="article-category">
@@ -230,7 +230,7 @@
         </div>
 
         <h1 class="article-title">
-          <a class="article-title-link" href="">Article 18</a>
+          <a class="article-title-link" href="">Article 38</a>
         </h1>
 
         <p class="article-category">
@@ -246,7 +246,7 @@
         </div>
 
         <h1 class="article-title">
-          <a class="article-title-link" href="">Article 19</a>
+          <a class="article-title-link" href="">Article 39</a>
         </h1>
 
         <p class="article-category">
@@ -262,7 +262,7 @@
         </div>
 
         <h1 class="article-title">
-          <a class="article-title-link" href="">Article 20</a>
+          <a class="article-title-link" href="">Article 40</a>
         </h1>
 
         <p class="article-category">
@@ -274,17 +274,17 @@
 
     <section id="page-navigation">
       <button class="change-page">
-        <a class="change-page-link" href="blog.html">Previous Page</a>
+        <a class="change-page-link" href="blog-page3.html">Previous Page</a>
       </button>
 
-      <a class="page-number" href="blog.html">&nbsp;1&nbsp;</a>
-      <a class="page-number-active" href="blog-page2.html">&nbsp;2&nbsp;</a>
-      <a class="page-number" href="blog-page3.html">&nbsp;3&nbsp;</a>
       <p class="page-number">&nbsp;...&nbsp;</p>
+      <a class="page-number" href="blog-page2.html">&nbsp;2&nbsp;</a>
+      <a class="page-number" href="blog-page3.html">&nbsp;3&nbsp;</a>
+      <a class="page-number-active"" href="blog-page4.html">&nbsp;4&nbsp;</a>
       <a class="page-number" href="blog-page5.html">&nbsp;5&nbsp;</a>
 
       <button class="change-page">
-        <a class="change-page-link" href="blog-page3.html">Next Page</a>
+        <a class="change-page-link" href="blog-page5.html">Next Page</a>
       </button>
     </section>
 
