--- a/blog.html
+++ b/blog.html
@@ -273,11 +273,15 @@
     </main>
 
     <section id="page-navigation">
+      <!-- <button class="change-page">
+        <a class="change-page-link" href="">Previous Page</a>
+      </button> -->
+
       <a class="page-number-active" href="blog.html">&nbsp;1&nbsp;</a>
       <a class="page-number" href="blog-page2.html">&nbsp;2&nbsp;</a>
-      <a class="page-number" href="">&nbsp;3&nbsp;</a>
-      <p class="page-number" href="">&nbsp;...&nbsp;</p>
-      <a class="page-number" href="">&nbsp;5&nbsp;</a>
+      <a class="page-number" href="blog-page3.html">&nbsp;3&nbsp;</a>
+      <p class="page-number">&nbsp;...&nbsp;</p>
+      <a class="page-number" href="blog-page5.html">&nbsp;5&nbsp;</a>
 
       <button class="change-page">
         <a class="change-page-link" href="blog-page2.html">Next Page</a>
