add image caption in blog-post

--- a/blog-post.html
+++ b/blog-post.html
@@ -134,6 +134,11 @@
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae eum iusto pariatur dolore exercitationem beatae incidunt repellendus consectetur eos quibusdam, in deleniti officia sequi, quae, voluptas cumque voluptatibus. Odio, molestias.
         </q><br>
         <br>
+
+        <figure class="blog-post-image-box">
+          <img class="blog-post-image" src="images/first-image.jpg" alt="first image">
+          <figcaption class="blog-post-caption">First image for my post.</figcaption>
+        </figure>
         
         <p class="codepen" data-height="265" data-theme-id="light" data-default-tab="js,result" data-user="Mamboleoo" data-slug-hash="XWJPxpZ" data-pen-title="Walkers - How to">
           <span>See the Pen <a href="https://codepen.io/Mamboleoo/pen/XWJPxpZ">
